[package]
name = "chatbot-telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4.0"
env_logger = "0.10.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
url = "2.3.1"
